[gd_scene load_steps=5 format=3 uid="uid://ynw0wkpt27kw"]

[ext_resource type="Script" path="res://Alex/alex_interview.gd" id="1_mwey1"]
[ext_resource type="Texture2D" uid="uid://f0ufcmrqnuea" path="res://Backgrounds/Snowy_Background_-_Plain.png" id="2_7nigj"]
[ext_resource type="Texture2D" uid="uid://bma2pet0xrcvg" path="res://Characters/MCNeutral.png" id="3_0lwx2"]
[ext_resource type="Texture2D" uid="uid://danrlufwkn3eg" path="res://Characters/Alex_Neutral.png" id="4_d0jrv"]

[node name="Alex Interview" type="Node2D"]
script = ExtResource("1_mwey1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 2360.0
offset_bottom = 1640.0
texture = ExtResource("2_7nigj")

[node name="McNeutral" type="Sprite2D" parent="TextureRect"]
position = Vector2(416, 800)
scale = Vector2(0.422581, 0.422581)
texture = ExtResource("3_0lwx2")

[node name="AlexNeutral" type="Sprite2D" parent="TextureRect"]
position = Vector2(1800, 696)
scale = Vector2(0.287097, 0.287097)
texture = ExtResource("4_d0jrv")

[node name="TextBox" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_top = 1120.0
offset_right = 2354.0
offset_bottom = 1496.0
color = Color(0.964706, 0.698039, 0.807843, 1)

[node name="Dialogue" type="Label" parent="TextureRect/TextBox"]
layout_mode = 0
offset_left = 8.0
offset_top = 112.0
offset_right = 2257.0
offset_bottom = 360.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Placeholder Text"
autowrap_mode = 3

[node name="NameBox" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 8.0
offset_top = 1128.0
offset_right = 528.0
offset_bottom = 1216.0
color = Color(1, 0.517647, 0.372549, 1)

[node name="Speaker\'s Name" type="Label" parent="TextureRect/NameBox"]
layout_mode = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 496.0
offset_bottom = 72.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Place Holder:"
horizontal_alignment = 1

[node name="ClickScreen" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 2352.0
offset_bottom = 1640.0

[connection signal="gui_input" from="ClickScreen" to="." method="_on_click_screen_gui_input"]
